--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,9 +39,9 @@ jobs:
         cd ../server
         npm run build
     
-    # 5. Login to DockerHub (secrets should be set in GitHub repository settings)
+    # 5. Login to DockerHub using Access Token
     - name: Log in to DockerHub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     # 6. Build and Push Docker images for both services (Next.js and Nest.js)
     - name: Build and Push Docker Images
@@ -53,7 +53,7 @@ jobs:
 
     # 7. SSH into the server and pull the new Docker images, then restart services
     - name: SSH and Deploy to Server
-      uses: appleboy/ssh-action@v0.1.0
+      uses: appleboy/ssh-action@v0.1.6
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
@@ -62,5 +62,6 @@ jobs:
         script: |
           docker pull ${{ secrets.DOCKER_USERNAME }}/nextjs:dev
           docker pull ${{ secrets.DOCKER_USERNAME }}/nestjs:dev
+          cd /home/ubuntu
           docker-compose down
           docker-compose up --build -d
